# learning-bazel-monorepo

./: .bazelrc  .gitignore  README.md  WORKSPACE  WORKSPACE.bazel  docker-compose.dev.yaml  docker-compose.prod.yaml  package.json  tsconfig.json
kubernetes/: gateway.yaml
services/gateway/: BUILD.bazel  package.json  prod.Dockerfile  tsconfig.tsbuildinfo
services/gateway/src/: index.ts  server.ts
