load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
  name = "gateway",
  srcs = [":src/index.ts"],
  deps = ["@npm//express"]
)

load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

nodejs_image(
    name = "gateway",
    entry_point = "lbm/services/gateway/dist/index.js",
    # This will be put into its own layer.
    node_modules = "@npm//:node_modules",
    data = [":gateway"],
)